Easymock library moved to tests plugin and made available to all dependent fragments
git-svn-id: http://svn.eclipsetrader.org/svnroot/eclipsetrader/trunk@1483 a8e5a36e-6fb8-47cc-9500-2d10918a294f

--- a/org.eclipsetrader.tests/build.properties
+++ b/org.eclipsetrader.tests/build.properties
@@ -1,5 +1,9 @@
-source.. = src/
+source.plugin.jar = src/
 output.. = bin/
 bin.includes = META-INF/,\
-               .,\
-               epl-v10.html
+               plugin.jar,\
+               epl-v10.html,\
+               easymock.jar,\
+               easymockclassextension.jar,\
+               cglib-2.1.3.jar,\
+               asm.jar
