--- a/org.eclipsetrader.ui.trading.tests/build.properties
+++ b/org.eclipsetrader.ui.trading.tests/build.properties
@@ -1,6 +1,4 @@
 source.plugin.jar = src/
 output.. = bin/
 bin.includes = META-INF/,\
-               plugin.jar,\
-               easymock.jar,\
-               easymockclassextension.jar
+               plugin.jar
