--- a/org.eclipsetrader.repository.hibernate.tests/build.properties
+++ b/org.eclipsetrader.repository.hibernate.tests/build.properties
@@ -2,6 +2,4 @@ source.fragment.jar = src/
 output.. = bin/
 bin.includes = META-INF/,\
                fragment.jar,\
-               hsqldb.jar,\
-               easymock.jar,\
-               easymockclassextension.jar
+               hsqldb.jar
