Fixed new market wizard save and added notifications to internal market service implementation
git-svn-id: http://svn.eclipsetrader.org/svnroot/eclipsetrader/trunk@1484 a8e5a36e-6fb8-47cc-9500-2d10918a294f

--- a/org.eclipsetrader.ui/plugin.xml
+++ b/org.eclipsetrader.ui/plugin.xml
@@ -251,7 +251,7 @@
       </wizard>
       <wizard
             category="org.eclipsetrader.ui.wizards.general"
-            class="org.eclipsetrader.ui.internal.markets.MarketWizard"
+            class="org.eclipsetrader.ui.internal.markets.NewMarketWizard"
             hasPages="true"
             icon="icons/etool16/market_new.png"
             id="org.eclipsetrader.ui.wizards.new.market"
