Added chart default values preferences and fixed initial history import from charts view
git-svn-id: http://svn.eclipsetrader.org/svnroot/eclipsetrader/trunk@1487 a8e5a36e-6fb8-47cc-9500-2d10918a294f

--- a/org.eclipsetrader.platform/plugin_customization.ini
+++ b/org.eclipsetrader.platform/plugin_customization.ini
@@ -36,6 +36,11 @@ org.eclipsetrader.ui/EXIT_PROMPT_ON_CLOSE_LAST_WINDOW=true
 org.eclipsetrader.core/DEFAULT_CONNECTOR=org.eclipsetrader.yahoo
 org.eclipsetrader.core/DEFAULT_BACKFILL_CONNECTOR=org.eclipsetrader.yahoo
 
+# chart defaults
+org.eclipsetrader.ui.charts/INITIAL_BACKFILL_METHOD=0
+org.eclipsetrader.ui.charts/INITIAL_BACKFILL_START_DATE=19900101
+org.eclipsetrader.ui.charts/INITIAL_BACKFILL_YEARS=10
+
 # Yahoo! Finance
 org.eclipsetrader.yahoo/DRIVER=org.eclipsetrader.yahoo.internal.core.connector.StreamingConnector
 org.eclipsetrader.yahoo/NEWS_UPDATE_INTERVAL=15
