Brokers extension point moved to core trading plugin
git-svn-id: http://svn.eclipsetrader.org/svnroot/eclipsetrader/trunk@1490 a8e5a36e-6fb8-47cc-9500-2d10918a294f

--- a/org.eclipsetrader.brokers.paper/plugin.xml
+++ b/org.eclipsetrader.brokers.paper/plugin.xml
@@ -2,7 +2,7 @@
 <?eclipse version="3.2"?>
 <plugin>
    <extension
-         point="org.eclipsetrader.core.brokers">
+         point="org.eclipsetrader.core.trading.brokers">
       <broker
             class="org.eclipsetrader.internal.brokers.paper.PaperBroker"
             id="org.eclipsetrader.brokers.paper"
