--- a/org.eclipsetrader.core.trading/plugin.xml
+++ b/org.eclipsetrader.core.trading/plugin.xml
@@ -3,6 +3,7 @@
 <plugin>
    <extension-point id="org.eclipsetrader.core.trading.systems" name="Trading Systems" schema="schema/systems.exsd"/>
    <extension-point id="org.eclipsetrader.core.trading.alerts" name="Alerts" schema="schema/alerts.exsd"/>
+   <extension-point id="org.eclipsetrader.core.trading.brokers" name="Brokers" schema="schema/brokers.exsd"/>
    <extension
          point="org.eclipsetrader.core.launchers">
       <launcher
