Added last trade date, date/time and bid/ask spread providers
git-svn-id: http://svn.eclipsetrader.org/svnroot/eclipsetrader/trunk@1491 a8e5a36e-6fb8-47cc-9500-2d10918a294f

--- a/org.eclipsetrader.ui/plugin.xml
+++ b/org.eclipsetrader.ui/plugin.xml
@@ -201,6 +201,21 @@
             id="org.eclipsetrader.ui.providers.gain"
             name="Gain">
       </provider>
+      <provider
+            class="org.eclipsetrader.ui.internal.providers.LastTradeDateFactory"
+            id="org.eclipsetrader.ui.providers.LastTradeDate"
+            name="Last Trade Date">
+      </provider>
+      <provider
+            class="org.eclipsetrader.ui.internal.providers.LastTradeDateTimeFactory"
+            id="org.eclipsetrader.ui.providers.LastTradeDateTime"
+            name="Last Trade Date / Time">
+      </provider>
+      <provider
+            class="org.eclipsetrader.ui.internal.providers.BidAskSpreadFactory"
+            id="org.eclipsetrader.ui.providers.BidAskSpread"
+            name="Bid/Ask Spread">
+      </provider>
    </extension>
    <extension
          point="org.eclipse.ui.newWizards">
