Changed account property page enablement rule
git-svn-id: http://svn.eclipsetrader.org/svnroot/eclipsetrader/trunk@1501 a8e5a36e-6fb8-47cc-9500-2d10918a294f

--- a/org.eclipsetrader.brokers.paper/plugin.xml
+++ b/org.eclipsetrader.brokers.paper/plugin.xml
@@ -52,9 +52,12 @@
             id="org.eclipsetrader.brokers.paper.properties.account"
             name="Account">
          <enabledWhen>
-            <instanceof
-                  value="org.eclipsetrader.internal.ui.trading.AccountElement">
-            </instanceof>
+            <adapt
+                  type="org.eclipsetrader.core.trading.IAccount">
+               <instanceof
+                     value="org.eclipsetrader.internal.brokers.paper.Account">
+               </instanceof>
+            </adapt>
          </enabledWhen>
       </page>
    </extension>
