--- a/org.eclipsetrader.releng/build.properties
+++ b/org.eclipsetrader.releng/build.properties
@@ -1,5 +1,5 @@
 ###############################################################################
-# Copyright (c) 2004-2008 Marco Maccaferri and others.
+# Copyright (c) 2004-2009 Marco Maccaferri and others.
 # All rights reserved. This program and the accompanying materials
 # are made available under the terms of the Eclipse Public License v1.0
 # which accompanies this distribution, and is available at
@@ -30,7 +30,7 @@ skipMaps=true
 skipFetch=true
 
 logExtension=.log
-javacDebugInfo=false 
+javacDebugInfo=true
 javacFailOnError=true
 javacVerbose=false
 javacSource=1.5
