--- a/org.eclipsetrader.releng/build.xml
+++ b/org.eclipsetrader.releng/build.xml
@@ -1,13 +1,41 @@
+<!--
+   Copyright (c) 2004-2010 Marco Maccaferri and others.
+   All rights reserved. This program and the accompanying materials
+   are made available under the terms of the Eclipse Public License v1.0
+   which accompanies this distribution, and is available at
+   http://www.eclipse.org/legal/epl-v10.html
+
+   Contributors:
+       Marco Maccaferri - initial API and implementation
+-->
+
 <project name="Product Build">
 	<property name="eclipse.home" value="${user.home}/eclipse"/>
-	<property name="eclipse.launcher" value="${eclipse.home}/plugins/org.eclipse.equinox.launcher_1.0.100.v20080509-1800.jar"/>
-	<property name="eclipse.pde.build" value="${eclipse.home}/plugins/org.eclipse.pde.build_3.4.0.v20080604"/>
+	<property name="buildDirectory" value="${user.home}/eclipsetrader.build"/>
+	<property name="baseLocation" value="${user.home}/eclipse-platform-3.5"/>
 
-	<property name="buildDirectory" value="${user.home}/eclipse.build"/>
-	<property name="baseLocation" value="${user.home}/eclipse-platform-3.4"/>
+    <path id="eclipse.launcher.id">
+        <fileset dir="${eclipse.home}/plugins">
+            <include name="org.eclipse.equinox.launcher_*.jar"/>
+        </fileset>
+    </path>
+    <property name="eclipse.launcher" refid="eclipse.launcher.id"/>
+    <echo message="Launcher ${eclipse.launcher}"/>
+
+    <path id="eclipse.pde.build.id">
+        <dirset dir="${eclipse.home}/plugins">
+            <include name="org.eclipse.pde.build_*"/>
+        </dirset>
+    </path>
+    <property name="eclipse.pde.build" refid="eclipse.pde.build.id"/>
+    <echo message="PDE Build ${eclipse.pde.build}"/>
 
 	<available file="${buildDirectory}/label.properties" property="label.properties.exists" />
 	<property file="${buildDirectory}/label.properties" />
+
+    <available file="${buildDirectory}/wc" type="dir" property="wc.exists"/>
+    <property name="repository" value="http://svn.eclipsetrader.org/svnroot/eclipsetrader"/>
+    <property name="tag" value="trunk"/>
 
 	<path id="project.classpath">
 		<pathelement location="${basedir}/libs/svnjavahl.jar"/>
@@ -16,110 +44,84 @@
 	</path>
 	<taskdef resource="svntask.properties" classpathref="project.classpath"/>
 
-	<target name="create.label.properties" unless="label.properties.exists">
-		<mkdir dir="${buildDirectory}" />
-		
-		<tstamp>
-		   <format property="timestamp" pattern="yyyyMMddHHmm"/>
-		</tstamp>
-		<property name="buildType" value="N"/>
-		<property name="buildId" value="${buildType}${timestamp}"/>
-		<property name="buildLabel" value="${buildType}${timestamp}"/>
+    <target name="clean">
+        <delete dir="${buildDirectory}/features"/>
+        <delete dir="${buildDirectory}/plugins"/>
+        <delete file="${buildDirectory}/label.properties"/>
+        <delete>
+            <fileset dir="${buildDirectory}" includes="assemble.*"/>
+            <fileset dir="${buildDirectory}" includes="package.*"/>
+            <fileset dir="${buildDirectory}" includes="final*"/>
+        </delete>
+    </target>
 
-		<echo file="${buildDirectory}/label.properties">
-			timestamp=${timestamp}
-			buildType=${buildType}
-			buildId=${buildId}
-			buildLabel=${buildLabel}
-		</echo>
-	</target>
-	
-	<target name="fetch" description="Checking out source from repository...">
-		<property name="tag" value="http://svn.eclipsetrader.org/svnroot/eclipsetrader/trunk"/>
-		<svn>
-			<export srcurl="${tag}/com.tictactec.ta.lib" destpath="${buildDirectory}/plugins/com.tictactec.ta.lib" revision="HEAD"/>
-			<export srcurl="${tag}/com.tictactec.ta.lib-feature" destpath="${buildDirectory}/features/com.tictactec.ta.lib" revision="HEAD"/>
+    <target name="fetch" depends="fetch-checkout,fetch-update">
+        <delete dir="${buildDirectory}/features"/>
+        <copy todir="${buildDirectory}/features">
+            <fileset dir="${buildDirectory}/wc">
+                <include name="*-feature/**/*" />
+            </fileset>
+        </copy>
+        <delete dir="${buildDirectory}/plugins"/>
+        <copy todir="${buildDirectory}/plugins">
+            <fileset dir="${buildDirectory}/wc">
+                <include name="*/**/*" />
+                <exclude name="*-feature/**/*" />
+            </fileset>
+        </copy>
+    </target>
 
-			<export srcurl="${tag}/com.sun.syndication" destpath="${buildDirectory}/plugins/com.sun.syndication" revision="HEAD"/>
-			<export srcurl="${tag}/com.sun.syndication.fetcher" destpath="${buildDirectory}/plugins/com.sun.syndication.fetcher" revision="HEAD"/>
-			<export srcurl="${tag}/com.sun.syndication-feature" destpath="${buildDirectory}/features/com.sun.syndication" revision="HEAD"/>
+    <target name="fetch-checkout" description="Checking out source from repository..." unless="wc.exists">
+        <svn>
+            <checkout url="${repository}/${tag}" destpath="${buildDirectory}/wc" revision="HEAD"/>
+        </svn>
+    </target>
 
-			<export srcurl="${tag}/org.apache.commons" destpath="${buildDirectory}/plugins/org.apache.commons" revision="HEAD"/>
-			<export srcurl="${tag}/org.apache.commons.codec" destpath="${buildDirectory}/plugins/org.apache.commons.codec" revision="HEAD"/>
-			<export srcurl="${tag}/org.apache.commons.collections" destpath="${buildDirectory}/plugins/org.apache.commons.collections" revision="HEAD"/>
-			<export srcurl="${tag}/org.apache.commons.httpclient" destpath="${buildDirectory}/plugins/org.apache.commons.httpclient" revision="HEAD"/>
-			<export srcurl="${tag}/org.apache.commons.logging" destpath="${buildDirectory}/plugins/org.apache.commons.logging" revision="HEAD"/>
-			<export srcurl="${tag}/org.apache.commons-feature" destpath="${buildDirectory}/features/org.apache.commons" revision="HEAD"/>
-
-			<export srcurl="${tag}/org.apache.log4j" destpath="${buildDirectory}/plugins/org.apache.log4j" revision="HEAD"/>
-			<export srcurl="${tag}/org.apache.log4j-feature" destpath="${buildDirectory}/features/org.apache.log4j" revision="HEAD"/>
-
-			<export srcurl="${tag}/org.jdom" destpath="${buildDirectory}/plugins/org.jdom" revision="HEAD"/>
-			<export srcurl="${tag}/org.jdom-feature" destpath="${buildDirectory}/features/org.jdom" revision="HEAD"/>
-
-			<export srcurl="${tag}/javax.xml.bind" destpath="${buildDirectory}/plugins/javax.xml.bind" revision="HEAD"/>
-
-			<export srcurl="${tag}/org.htmlparser" destpath="${buildDirectory}/plugins/org.htmlparser" revision="HEAD"/>
-			<export srcurl="${tag}/org.htmlparser-feature" destpath="${buildDirectory}/features/org.htmlparser" revision="HEAD"/>
-
-			<export srcurl="${tag}/org.eclipse.nebula.widgets.cdatetime" destpath="${buildDirectory}/plugins/org.eclipse.nebula.widgets.cdatetime" revision="HEAD"/>
-			<export srcurl="${tag}/org.eclipse.nebula.widgets.pshelf" destpath="${buildDirectory}/plugins/org.eclipse.nebula.widgets.pshelf" revision="HEAD"/>
-			<export srcurl="${tag}/org.eclipse.rcp.extras" destpath="${buildDirectory}/plugins/org.eclipse.rcp.extras" revision="HEAD"/>
-			<export srcurl="${tag}/org.eclipse.rcp.extras-feature" destpath="${buildDirectory}/features/org.eclipse.rcp.extras" revision="HEAD"/>
-
-			<export srcurl="${tag}/org.eclipsetrader.core" destpath="${buildDirectory}/plugins/org.eclipsetrader.core" revision="HEAD"/>
-			<export srcurl="${tag}/org.eclipsetrader.core.charts" destpath="${buildDirectory}/plugins/org.eclipsetrader.core.charts" revision="HEAD"/>
-			<export srcurl="${tag}/org.eclipsetrader.core.trading" destpath="${buildDirectory}/plugins/org.eclipsetrader.core.trading" revision="HEAD"/>
-			<export srcurl="${tag}/org.eclipsetrader.news" destpath="${buildDirectory}/plugins/org.eclipsetrader.news" revision="HEAD"/>
-			<export srcurl="${tag}/org.eclipsetrader.platform" destpath="${buildDirectory}/plugins/org.eclipsetrader.platform" revision="HEAD"/>
-			<export srcurl="${tag}/org.eclipsetrader.platform.doc.isv" destpath="${buildDirectory}/plugins/org.eclipsetrader.platform.doc.isv" revision="HEAD"/>
-			<export srcurl="${tag}/org.eclipsetrader.platform.doc.user" destpath="${buildDirectory}/plugins/org.eclipsetrader.platform.doc.user" revision="HEAD"/>
-			<export srcurl="${tag}/org.eclipsetrader.repository.local" destpath="${buildDirectory}/plugins/org.eclipsetrader.repository.local" revision="HEAD"/>
-			<export srcurl="${tag}/org.eclipsetrader.ui" destpath="${buildDirectory}/plugins/org.eclipsetrader.ui" revision="HEAD"/>
-			<export srcurl="${tag}/org.eclipsetrader.ui.application" destpath="${buildDirectory}/plugins/org.eclipsetrader.ui.application" revision="HEAD"/>
-			<export srcurl="${tag}/org.eclipsetrader.ui.charts" destpath="${buildDirectory}/plugins/org.eclipsetrader.ui.charts" revision="HEAD"/>
-			<export srcurl="${tag}/org.eclipsetrader.ui.charts.indicators" destpath="${buildDirectory}/plugins/org.eclipsetrader.ui.charts.indicators" revision="HEAD"/>
-			<export srcurl="${tag}/org.eclipsetrader.ui.trading" destpath="${buildDirectory}/plugins/org.eclipsetrader.ui.trading" revision="HEAD"/>
-			<export srcurl="${tag}/org.eclipsetrader.platform-feature" destpath="${buildDirectory}/features/org.eclipsetrader.platform" revision="HEAD"/>
-
-			<export srcurl="${tag}/org.eclipsetrader.directa" destpath="${buildDirectory}/plugins/org.eclipsetrader.directa" revision="HEAD"/>
-			<export srcurl="${tag}/org.eclipsetrader.directa-feature" destpath="${buildDirectory}/features/org.eclipsetrader.directa" revision="HEAD"/>
-
-			<export srcurl="${tag}/org.eclipsetrader.archipelago" destpath="${buildDirectory}/plugins/org.eclipsetrader.archipelago" revision="HEAD"/>
-			<export srcurl="${tag}/org.eclipsetrader.borsaitalia" destpath="${buildDirectory}/plugins/org.eclipsetrader.borsaitalia" revision="HEAD"/>
-
-			<export srcurl="${tag}/org.eclipsetrader.directaworld" destpath="${buildDirectory}/plugins/org.eclipsetrader.directaworld" revision="HEAD"/>
-			<export srcurl="${tag}/org.eclipsetrader.directaworld-feature" destpath="${buildDirectory}/features/org.eclipsetrader.directaworld" revision="HEAD"/>
-
-			<export srcurl="${tag}/org.eclipsetrader.yahoo" destpath="${buildDirectory}/plugins/org.eclipsetrader.yahoo" revision="HEAD"/>
-			<export srcurl="${tag}/org.eclipsetrader.yahoo-feature" destpath="${buildDirectory}/features/org.eclipsetrader.yahoo" revision="HEAD"/>
-
-			<export srcurl="${tag}/org.eclipsetrader.brokers.paper" destpath="${buildDirectory}/plugins/org.eclipsetrader.brokers.paper" revision="HEAD"/>
-			<export srcurl="${tag}/org.eclipsetrader.brokers.paper-feature" destpath="${buildDirectory}/features/org.eclipsetrader.brokers.paper" revision="HEAD"/>
-		</svn>
-	</target>
+    <target name="fetch-update" description="Updating source from repository..." if="wc.exists">
+        <svn>
+            <update dir="${buildDirectory}/wc"/>
+        </svn>
+    </target>
 
 	<target name="build" depends="create.label.properties">
-		<replace dir="${buildDirectory}/plugins" value="${buildId}" token="@build@">
-			<include name="**/about.mappings" />
-		</replace>
-		<replace dir="${buildDirectory}/features" value="${buildId}" token="@build@">
-			<include name="**/config.ini" />
-		</replace>
-
-		<java jar="${eclipse.launcher}" fork="true" dir="${basedir}">
-			<arg value="-application"/>
-			<arg value="org.eclipse.ant.core.antRunner"/>
-			<arg value="-buildfile"/>
-			<arg value="${eclipse.pde.build}/scripts/productBuild/productBuild.xml"/>
-			<arg value="-DbaseLocation=${baseLocation}"/>
-			<arg value="-Dproduct=${basedir}/eclipsetrader.product"/>
-			<arg value="-DbuildType=${buildType}"/>
-			<arg value="-DbuildId=${buildId}"/>
-			<arg value="-DbuildLabel=${buildLabel}"/>
-			<arg value="-Dtimestamp=${timestamp}"/>
-			<arg value="-DbuildDirectory=${buildDirectory}"/>
-		</java>
+        <replace dir="${buildDirectory}/plugins" value="${buildId}" token="@build@">
+            <include name="**/about.mappings" />
+        </replace>
+        <replace dir="${buildDirectory}/features" value="${buildId}" token="@build@">
+            <include name="**/config.ini" />
+        </replace>
+        
+        <java jar="${eclipse.launcher}" fork="true" dir="${basedir}">
+            <arg value="-application"/>
+            <arg value="org.eclipse.ant.core.antRunner"/>
+            <arg value="-buildfile"/>
+            <arg value="${eclipse.pde.build}/scripts/productBuild/productBuild.xml"/>
+            <arg value="-DbaseLocation=${baseLocation}"/>
+            <arg value="-Dproduct=${basedir}/eclipsetrader.product"/>
+            <arg value="-DbuildType=${buildType}"/>
+            <arg value="-DbuildId=${buildId}"/>
+            <arg value="-DbuildLabel=${buildLabel}"/>
+            <arg value="-Dtimestamp=${timestamp}"/>
+            <arg value="-DbuildDirectory=${buildDirectory}"/>
+        </java>
 	</target>
+
+    <target name="create.label.properties" unless="label.properties.exists">
+        <mkdir dir="${buildDirectory}" />
+        
+        <tstamp>
+           <format property="timestamp" pattern="yyyyMMddHHmm"/>
+        </tstamp>
+        <property name="buildType" value="N"/>
+        <property name="buildId" value="${buildType}${timestamp}"/>
+        <property name="buildLabel" value="${buildType}${timestamp}"/>
+
+        <echo file="${buildDirectory}/label.properties">
+            timestamp=${timestamp}
+            buildType=${buildType}
+            buildId=${buildId}
+            buildLabel=${buildLabel}
+        </echo>
+    </target>
 
 </project>
