--- a/org.eclipsetrader.releng/build.properties
+++ b/org.eclipsetrader.releng/build.properties
@@ -1,5 +1,5 @@
 ###############################################################################
-# Copyright (c) 2004-2009 Marco Maccaferri and others.
+# Copyright (c) 2004-2008 Marco Maccaferri and others.
 # All rights reserved. This program and the accompanying materials
 # are made available under the terms of the Eclipse Public License v1.0
 # which accompanies this distribution, and is available at
@@ -17,6 +17,7 @@ collectingFolder=${archivePrefix}
 
 configs=\
     win32, win32, x86 & \
+    win32, win32, x86_64 & \
     win32, wpf, x86 & \
     linux, gtk, x86 & \
     linux, gtk, x86_64 & \
@@ -25,11 +26,21 @@ configs=\
 forceContextQualifier=v${timestamp}
 generateFeatureVersionSuffix=true
 
+p2.gathering=true
+p2.build.repo=file:${buildDirectory}/repo
+# p2.metadata.repo=file:${buildDirectory}/artifact
+# p2.artifact.repo=file:${buildDirectory}/artifact
+p2.compress=true
+p2.flavor=tooling
+# p2.publish.artifacts=true
+
 skipBase=true
 skipMaps=true
 skipFetch=true
+skipDirector=true
 
 logExtension=.log
+
 javacDebugInfo=true
 javacFailOnError=true
 javacVerbose=false
