--- a/org.eclipsetrader.releng/build.properties
+++ b/org.eclipsetrader.releng/build.properties
@@ -1,5 +1,5 @@
 ###############################################################################
-# Copyright (c) 2004-2008 Marco Maccaferri and others.
+# Copyright (c) 2004-2011 Marco Maccaferri and others.
 # All rights reserved. This program and the accompanying materials
 # are made available under the terms of the Eclipse Public License v1.0
 # which accompanies this distribution, and is available at
@@ -18,10 +18,10 @@ collectingFolder=${archivePrefix}
 configs=\
     win32, win32, x86 & \
     win32, win32, x86_64 & \
-    win32, wpf, x86 & \
     linux, gtk, x86 & \
     linux, gtk, x86_64 & \
-    macosx, carbon, ppc
+    macosx, cocoa, x86 & \
+    macosx, cocoa, x86_64
 
 forceContextQualifier=v${timestamp}
 generateFeatureVersionSuffix=true
