Added dividends page to security properties
git-svn-id: http://svn.eclipsetrader.org/svnroot/eclipsetrader/trunk@1550 a8e5a36e-6fb8-47cc-9500-2d10918a294f

--- a/org.eclipsetrader.ui/plugin.xml
+++ b/org.eclipsetrader.ui/plugin.xml
@@ -494,6 +494,16 @@
          </enabledWhen>
       </page>
       <page
+            class="org.eclipsetrader.ui.internal.securities.properties.DividendsProperties"
+            id="org.eclipsetrader.ui.propertypages.dividends"
+            name="Dividends">
+         <enabledWhen>
+            <instanceof
+                  value="org.eclipsetrader.core.instruments.Stock">
+            </instanceof>
+         </enabledWhen>
+      </page>
+      <page
             class="org.eclipsetrader.ui.internal.markets.ConnectorsPage"
             id="org.eclipsetrader.ui.propertypages.markets.connectors"
             name="Connectors">
