Changed workbench layout to display a central editor-like area
git-svn-id: http://svn.eclipsetrader.org/svnroot/eclipsetrader/trunk@1557 a8e5a36e-6fb8-47cc-9500-2d10918a294f

--- a/org.eclipsetrader.news/plugin.xml
+++ b/org.eclipsetrader.news/plugin.xml
@@ -112,5 +112,17 @@
             name="News Reader">
       </launcher>
    </extension>
+   <extension
+         point="org.eclipse.ui.perspectiveExtensions">
+      <perspectiveExtension
+            targetID="org.eclipsetrader.ui.traderPerspective">
+         <view
+               id="org.eclipsetrader.ui.views.headlines"
+               minimized="false"
+               relationship="stack"
+               relative="org.eclipse.ui.views.ProgressView">
+         </view>
+      </perspectiveExtension>
+   </extension>
 
 </plugin>
